[gd_scene load_steps=4 format=3 uid="uid://mk83soiddq3l"]

[ext_resource type="Script" uid="uid://dhem5fck6k1cb" path="res://src/scripts/exercises/vocabulary.gd" id="1_ar6ky"]
[ext_resource type="FontFile" uid="uid://cxsv026so27q8" path="res://src/assets/fonts/Ruler 9.ttf" id="2_aqu6e"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="3_hacc8"]

[node name="Vocabulary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ar6ky")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="QuestionLabel" type="Label" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.516
anchor_top = 0.187
anchor_right = 0.516
anchor_bottom = 0.187
offset_left = -469.432
offset_top = -30.176
offset_right = 468.568
offset_bottom = 29.824
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_aqu6e")
theme_override_font_sizes/font_size = 56
text = "What is this?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="QuestionImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.515
anchor_top = 0.452
anchor_right = 0.515
anchor_bottom = 0.452
offset_left = -124.28
offset_top = -123.896
offset_right = 123.72
offset_bottom = 124.104
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.647
anchor_right = 0.508
anchor_bottom = 0.647
offset_left = -233.216
offset_top = 35.744
offset_right = 228.784
offset_bottom = 133.744
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hacc8")
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
mouse_default_cursor_shape = 2
text = "Generic answer 1"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
mouse_default_cursor_shape = 2
text = "Generic answer 2"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
mouse_default_cursor_shape = 2
text = "Generic answer 3"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 7
mouse_default_cursor_shape = 2
text = "Generic answer 4"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button4" to="." method="_on_button_4_pressed"]
